--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
         content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no">
   <title>smsrt</title>
   <link rel="stylesheet" href="/static/css/reset.css">
+  <!-- 引入的图标 -->
   <link rel="stylesheet" href="http://at.alicdn.com/t/font_518606_6676bmcalnrhehfr.css"></link>
-  <link rel="stylesheet" href="http://at.alicdn.com/t/font_944857_mm68leer1cg.css"></link>
+  <link rel="stylesheet" href="http://at.alicdn.com/t/font_944857_p87h627dm5p.css"></link>
   <script src="https://as.alipayobjects.com/g/component/fastclick/1.0.6/fastclick.js"></script>
   <script src="http://gosspublic.alicdn.com/aliyun-oss-sdk-4.4.4.min.js"></script>
   <script src="http://libs.baidu.com/jquery/2.1.4/jquery.min.js"></script>
